--- a/INFOGR2024TemplateP2.csproj
+++ b/INFOGR2024TemplateP2.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="assets\coin.png" />
+  </ItemGroup>
+
 </Project>
